# houndtext

./: .gitignore  README.md  configure.ac
include/: die.h  input.h  main.h  raw.h
src/: Makefile.am  die.c  input.c  main.c  raw.c
